Completed Scores table object
Squashed commit of the following:

commit faa73e6fe16553a72a145944da39b017cf0f2ea0
Author: Sean A. Young <cname87@gmail.com>
Date:   Wed Jul 21 21:33:54 2021 +0100

    Completed Scores table

commit 1f0a0d25cde6593a41487c311d3ee79f0d17ad88
Author: Sean A. Young <cname87@gmail.com>
Date:   Tue Jul 20 19:48:31 2021 +0100

    Scores interim

commit b9d7b89a5ab742bfb29ab6d45d8a4df6cce526f6
Author: Sean A. Young <cname87@gmail.com>
Date:   Sat Jul 17 15:06:39 2021 +0100

    Scores table interim

commit 2b868283f970465e3ed89acee26666e346e75782
Author: Sean A. Young <cname87@gmail.com>
Date:   Tue Jul 13 22:05:44 2021 +0100

    Add Scores Table

commit b4b6ae6f3ef1b98c3501a1d6bc757f416a26e25a
Author: Sean A. Young <cname87@gmail.com>
Date:   Thu Jul 8 21:22:15 2021 +0100

    Scores Table interim

commit 10c5929316592895e601d9d6dd23e303421ae02e
Author: Sean A. Young <cname87@gmail.com>
Date:   Fri Jul 2 23:22:56 2021 +0100

    Fix index.html bug

commit 8b0e626990449b5d265fbfb95d1d9c66848ee315
Author: Sean A. Young <cname87@gmail.com>
Date:   Fri Jul 2 22:34:51 2021 +0100

    Add Datatable interim

commit db7a7ea025aff44cf8a7a590b913a600f2bb2dee
Author: Sean A. Young <cname87@gmail.com>
Date:   Sat Jun 26 20:57:21 2021 +0100

    Refactor css

commit 9b21cbeef1d07d2e4d422a051dbc553de40ad1f0
Author: Sean A. Young <cname87@gmail.com>
Date:   Wed Jun 23 19:01:26 2021 +0100

    Interim
